--- a/config/alien2scary_flux.yml
+++ b/config/alien2scary_flux.yml
@@ -9,7 +9,7 @@ aug_loc: 1
 azim_max: 360.0
 azim_min: 0.0
 base_text_prompt: a alien
-batch_size: 10
+batch_size: 18
 blocks_to_swap: 0
 bsdf: diffuse
 bucket_no_upscale: true
@@ -121,15 +121,32 @@ seed: 12345
 single_blocks_to_swap: 0
 t5xxl: model_zoo/flux/t5xxl_fp16.safetensors
 t5xxl_max_token_length: 512
-target_prompt: "The nine-grid image shows different views of the Bust of Venus. The\
-  \ Bust of Venus is characterized by a graceful, elongated neck and a distinct head\
-  \ with softly stylized features. The head is adorned with flowing, abstract protrusions\
-  \ that evoke the appearance of Venus\u2019s iconic hairstyle in a minimalist manner.\
-  \ The shoulders and upper torso are simplified and geometrically shaped, tapering\
-  \ smoothly into a statuesque form. The mesh exhibits a faceted, low polygon style\
-  \ that gives the Bust of Venus a geometric and modernized appearance. The absence\
-  \ of texture and color in the mesh indicates that it is a basic 3D model that can\
-  \ be used as a basis for further design and development."
+target_prompt: 'The nine-grid image shows different views of a creature that resembles
+  a stylized robot or alien-like figure. The alien is characterized by a box-shaped
+  torso, a head resembling an elongated bulb or droplet, and four cylindrical legs
+  that provide a stable quad-legged base. Its head has a smooth, rounded shape that
+  tapers toward the top, giving it an abstract and organic appearance.
+
+
+  Protruding from the top of the alien''s torso are thin, wavy appendages or antenna-like
+  structures, which add a sense of movement and otherworldly flair. These appendages
+  vary in orientation and curvature across the different perspectives shown. The arms,
+  also elongated and thin, extend fluidly outward in a slightly whimsical fashion,
+  contributing to the alien''s eerie yet intriguing aesthetics.
+
+
+  The body mesh exhibits a smooth, faceted low-polygon style, emphasizing its geometric
+  and simplified nature. The absence of texture and color results in a uniform gray
+  tone, making it a stark and abstract design that leaves room for imagination. From
+  various angles, the figure maintains an unsettling symmetry and balance, with the
+  final bottom-right view revealing an overhead perspective that showcases the orientation
+  of its limbs and appendages.[PATCH 1] The front view of the 3D a scary alien mesh,
+  [PATCH 2] The back view of the 3D a scary alien mesh, [PATCH 3] The right view of
+  the 3D a scary alien mesh, [PATCH 4] The left view of the 3D a scary alien mesh,
+  [PATCH 5] The front right view of the 3D a scary alien mesh, [PATCH 6] The front
+  left view of the 3D a scary alien mesh, [PATCH 7] The back righ view of the 3D a
+  scary alien mesh, [PATCH 8] The back left view of the 3D a scary alien mesh, [PATCH
+  9] The top view of the 3D a scary alien mesh.'
 text_prompt: a scary alien
 timestep_sampling: sigma
 train_blocks: all
