--- a/config/bird_bat_flux.yml
+++ b/config/bird_bat_flux.yml
@@ -8,7 +8,7 @@ aug_light: 1
 aug_loc: 1
 azim_max: 360.0
 azim_min: 0.0
-base_text_prompt: a guitar
+base_text_prompt: a bird
 batch_size: 18
 blocks_to_swap: 0
 bsdf: diffuse
@@ -26,7 +26,7 @@ clip_l: model_zoo/flux/clip_l.safetensors
 clip_model: ViT-B/32
 clip_skip: 1
 clip_weight: 2.0
-config: config/guitar2banjo_flux.yml
+config: config/bird_bat_flux.yml
 consistency_azim_filter: 20
 consistency_clip_model: ViT-B/32
 consistency_elev_filter: 30
@@ -84,7 +84,7 @@ max_timestep: 1000
 max_token_length: 225
 max_train_steps: 8500
 mem_eff_attn: true
-mesh: meshes/rotated/guitar.obj
+mesh: meshes/rotated/bird.obj
 min_bucket_reso: 256
 min_timestep: 0
 mixed_precision: bf16
@@ -102,7 +102,7 @@ noise_offset: 0.02
 noise_offset_random_strength: false
 noise_offset_type: Original
 optimizer_type: AdamW8bit
-output_path: ./outputs/guitar2banjo_flux
+output_path: ./outputs/bird_bat_flux
 persistent_data_loader_workers: 0
 pretrained_model_name_or_path: model_zoo/flux/flux1-dev.safetensors
 prior_loss_weight: 1
@@ -121,22 +121,23 @@ seed: 12345
 single_blocks_to_swap: 0
 t5xxl: model_zoo/flux/t5xxl_fp16.safetensors
 t5xxl_max_token_length: 512
-target_prompt: The nine-grid image shows different views of a banjo-like object. The
-  banjo is characterized by a rounded, circular body and a long, slender neck. Its
-  body is flat and features a slightly raised edge, resembling a drum-like structure.
-  The neck extends vertically and culminates in a tuning peg section. The neck is
-  slim and exhibits a straight profile while connecting seamlessly to the body. The
-  tuning peg head is distinct and slightly curved, accommodating multiple tuning pegs.
-  The mesh exhibits a faceted, low-polygon style that gives the banjo a geometric
-  and simplified appearance. The absence of texture and color in the mesh indicates
-  that it is a basic 3D model, well-suited as a prototype for further refinement or
-  design adaptations.[PATCH 1] The front view of the 3D a banjo mesh, [PATCH 2] The
-  back view of the 3D a banjo mesh, [PATCH 3] The right view of the 3D a banjo mesh,
-  [PATCH 4] The left view of the 3D a banjo mesh, [PATCH 5] The front right view of
-  the 3D a banjo mesh, [PATCH 6] The front left view of the 3D a banjo mesh, [PATCH
-  7] The back righ view of the 3D a banjo mesh, [PATCH 8] The back left view of the
-  3D a banjo mesh, [PATCH 9] The top view of the 3D a banjo mesh.
-text_prompt: a banjo
+target_prompt: The nine-grid image shows different views of a bat. The bat is characterized
+  by a small, streamlined body with large wings that extend outward. The bat's head
+  is distinct and slightly rounded, with a tapered shape towards the front. The wings
+  are thin and elongated, curving gently to create a dynamic pose, and are attached
+  to the bat's body at the shoulders, extending down along its sides. The overall
+  body shape is sleek and adapted for flight, with no discernible legs visible in
+  this basic model. The mesh exhibits a smooth, low-detail style that gives the bat
+  a simplified and minimalistic appearance. The absence of texture and color in the
+  mesh indicates that it is a basic 3D model intended as an initial conceptual or
+  structural representation of the bat, suitable for further refinement or use in
+  design projects.[PATCH 1] The front view of the 3D a bat mesh, [PATCH 2] The back
+  view of the 3D a bat mesh, [PATCH 3] The right view of the 3D a bat mesh, [PATCH
+  4] The left view of the 3D a bat mesh, [PATCH 5] The front right view of the 3D
+  a bat mesh, [PATCH 6] The front left view of the 3D a bat mesh, [PATCH 7] The back
+  righ view of the 3D a bat mesh, [PATCH 8] The back left view of the 3D a bat mesh,
+  [PATCH 9] The top view of the 3D a bat mesh.
+text_prompt: a bat
 timestep_sampling: sigma
 train_blocks: all
 train_res: 512
