--- a/config/cow2aligator_flux.yml
+++ b/config/cow2aligator_flux.yml
@@ -8,8 +8,8 @@ aug_light: 1
 aug_loc: 1
 azim_max: 360.0
 azim_min: 0.0
-base_text_prompt: a spot
-batch_size: 10
+base_text_prompt: a cow
+batch_size: 18
 blocks_to_swap: 0
 bsdf: diffuse
 bucket_no_upscale: true
@@ -26,7 +26,7 @@ clip_l: model_zoo/flux/clip_l.safetensors
 clip_model: ViT-B/32
 clip_skip: 1
 clip_weight: 2.0
-config: ./config/cow2aligator_flux.yml
+config: config/cow2aligator_flux.yml
 consistency_azim_filter: 20
 consistency_clip_model: ViT-B/32
 consistency_elev_filter: 30
@@ -84,7 +84,7 @@ max_timestep: 1000
 max_token_length: 225
 max_train_steps: 8500
 mem_eff_attn: true
-mesh: meshes/rotated/spot.obj
+mesh: meshes/rotated/cow.obj
 min_bucket_reso: 256
 min_timestep: 0
 mixed_precision: bf16
@@ -102,7 +102,7 @@ noise_offset: 0.02
 noise_offset_random_strength: false
 noise_offset_type: Original
 optimizer_type: AdamW8bit
-output_path: ./outputs/donkey2camel_flux
+output_path: ./outputs/cow2aligator_flux
 persistent_data_loader_workers: 0
 pretrained_model_name_or_path: model_zoo/flux/flux1-dev.safetensors
 prior_loss_weight: 1
@@ -121,17 +121,22 @@ seed: 12345
 single_blocks_to_swap: 0
 t5xxl: model_zoo/flux/t5xxl_fp16.safetensors
 t5xxl_max_token_length: 512
-target_prompt: The nine-grid image shows different views of the Bust of Venus. The
-  Bust of Venus is characterized by a graceful, human-like upper body and a distinct
-  head. The head is defined by delicate facial features, including a straight, classical
-  nose, softly closed lips, and deeply set eyes that evoke a serene expression. Her
-  hair is styled with intricate waves, presenting elegance and refinement consistent
-  with classical sculpture. The neck is slender and connects seamlessly to her shoulders,
-  which lack arms, emphasizing the bust's sculptural focus. The mesh exhibits a smooth,
-  flowing surface that gives the model an organic and naturalistic appearance while
-  still omitting intricate textures or colors. The absence of texture and color indicates
-  that it is a basic 3D model, serving as a foundation for further detailing or artistic
-  interpretation.
+target_prompt: The nine-grid image shows different views of an alligator-inspired
+  creature. The creature is characterized by a stout, quadrupedal body and distinct,
+  exaggerated horns on its head. The head features a broad, rounded snout with chains
+  hanging from the mouth area, adding an ornamental or stylized element. The back
+  is decorated with rounded, pockmark-like details, and the tail curls tightly in
+  a spiral fashion. The legs are short and sturdy, supporting the compact body. The
+  mesh exhibits a smooth, sculptural style with rounded edges and soft contours, providing
+  a stylized and whimsical appearance. The absence of texture and color in the mesh
+  suggests that it is a basic 3D model, emphasizing form and structure, suitable for
+  creative conceptualization or further refinement.[PATCH 1] The front view of the
+  3D a alligator mesh, [PATCH 2] The back view of the 3D a alligator mesh, [PATCH
+  3] The right view of the 3D a alligator mesh, [PATCH 4] The left view of the 3D
+  a alligator mesh, [PATCH 5] The front right view of the 3D a alligator mesh, [PATCH
+  6] The front left view of the 3D a alligator mesh, [PATCH 7] The back righ view
+  of the 3D a alligator mesh, [PATCH 8] The back left view of the 3D a alligator mesh,
+  [PATCH 9] The top view of the 3D a alligator mesh.
 text_prompt: a alligator
 timestep_sampling: sigma
 train_blocks: all
