--- a/config/cow2giraffe_flux.yml
+++ b/config/cow2giraffe_flux.yml
@@ -8,8 +8,8 @@ aug_light: 1
 aug_loc: 1
 azim_max: 360.0
 azim_min: 0.0
-base_text_prompt: a spot
-batch_size: 10
+base_text_prompt: a cow
+batch_size: 18
 blocks_to_swap: 0
 bsdf: diffuse
 bucket_no_upscale: true
@@ -84,7 +84,7 @@ max_timestep: 1000
 max_token_length: 225
 max_train_steps: 8500
 mem_eff_attn: true
-mesh: meshes/rotated/spot.obj
+mesh: meshes/rotated/cow.obj
 min_bucket_reso: 256
 min_timestep: 0
 mixed_precision: bf16
@@ -102,7 +102,7 @@ noise_offset: 0.02
 noise_offset_random_strength: false
 noise_offset_type: Original
 optimizer_type: AdamW8bit
-output_path: ./outputs/cow2graffe_flux
+output_path: ./outputs/cow2giraffe_flux
 persistent_data_loader_workers: 0
 pretrained_model_name_or_path: model_zoo/flux/flux1-dev.safetensors
 prior_loss_weight: 1
@@ -121,15 +121,21 @@ seed: 12345
 single_blocks_to_swap: 0
 t5xxl: model_zoo/flux/t5xxl_fp16.safetensors
 t5xxl_max_token_length: 512
-target_prompt: The nine-grid image shows different views of the Bust of Venus. The
-  Bust of Venus is characterized by a graceful, rounded form with an emphasis on smooth,
-  flowing lines. The head features subtle contours that suggest elegant facial features,
-  including a gentle curve representing the nose and a rounded structure indicating
-  the chin. The hair is depicted with soft, abstract protrusions, capturing the essence
-  of flowing locks in a simplified manner. The mesh exhibits a smooth, minimalistic
-  style that gives the Bust of Venus an abstract and elegant appearance. The absence
-  of texture and color in the mesh suggests that it is a basic 3D model, serving as
-  a foundation for further artistic refinement or realistic detailing.
+target_prompt: The nine-grid image shows different views of a giraffe-like creature.
+  The creature is characterized by a stocky, elongated body with several rounded protuberances
+  along its sides. Its distinct head features a pair of curved horns and a detailed
+  beard-like texture, giving it an otherworldly yet familiar appearance. The body
+  is compact and rests on four straight legs, appearing sturdy and well-proportioned.
+  The tail is short and curls upward, adding a touch of whimsy to the design. The
+  mesh appears to be in a sleek, faceted 3D modeling style, devoid of textures and
+  colors, creating a minimalist yet refined structure. This basic 3D model of the
+  giraffe-like creature can serve as a starting point for further sculpting, texturing,
+  or animation in design work.[PATCH 1] The front view of the 3D a giraffe mesh, [PATCH
+  2] The back view of the 3D a giraffe mesh, [PATCH 3] The right view of the 3D a
+  giraffe mesh, [PATCH 4] The left view of the 3D a giraffe mesh, [PATCH 5] The front
+  right view of the 3D a giraffe mesh, [PATCH 6] The front left view of the 3D a giraffe
+  mesh, [PATCH 7] The back righ view of the 3D a giraffe mesh, [PATCH 8] The back
+  left view of the 3D a giraffe mesh, [PATCH 9] The top view of the 3D a giraffe mesh.
 text_prompt: a giraffe
 timestep_sampling: sigma
 train_blocks: all
