--- a/config/cow2ladybug_flux.yml
+++ b/config/cow2ladybug_flux.yml
@@ -9,7 +9,7 @@ aug_loc: 1
 azim_max: 360.0
 azim_min: 0.0
 base_text_prompt: a cow
-batch_size: 10
+batch_size: 18
 blocks_to_swap: 0
 bsdf: diffuse
 bucket_no_upscale: true
@@ -26,7 +26,7 @@ clip_l: model_zoo/flux/clip_l.safetensors
 clip_model: ViT-B/32
 clip_skip: 1
 clip_weight: 2.0
-config: ./config/cow2ladybug_flux.yml
+config: config/cow2ladybug_flux.yml
 consistency_azim_filter: 20
 consistency_clip_model: ViT-B/32
 consistency_elev_filter: 30
@@ -102,7 +102,7 @@ noise_offset: 0.02
 noise_offset_random_strength: false
 noise_offset_type: Original
 optimizer_type: AdamW8bit
-output_path: ./outputs/donkey2camel_flux
+output_path: ./outputs/cow2ladybug_flux
 persistent_data_loader_workers: 0
 pretrained_model_name_or_path: model_zoo/flux/flux1-dev.safetensors
 prior_loss_weight: 1
@@ -121,17 +121,20 @@ seed: 12345
 single_blocks_to_swap: 0
 t5xxl: model_zoo/flux/t5xxl_fp16.safetensors
 t5xxl_max_token_length: 512
-target_prompt: The nine-grid image shows different views of the Bust of Venus. The
-  Bust of Venus is characterized by a graceful, human-like upper body and a distinct
-  head. The head is defined by delicate facial features, including a straight, classical
-  nose, softly closed lips, and deeply set eyes that evoke a serene expression. Her
-  hair is styled with intricate waves, presenting elegance and refinement consistent
-  with classical sculpture. The neck is slender and connects seamlessly to her shoulders,
-  which lack arms, emphasizing the bust's sculptural focus. The mesh exhibits a smooth,
-  flowing surface that gives the model an organic and naturalistic appearance while
-  still omitting intricate textures or colors. The absence of texture and color indicates
-  that it is a basic 3D model, serving as a foundation for further detailing or artistic
-  interpretation.
+target_prompt: The nine-grid image shows different views of a ladybug, featuring its
+  distinct and rounded body shape. The ladybug's head is small and typically features
+  a pair of antennae. Its elytra, or hardened forewings, are conspicuously dome-shaped
+  and usually adorned with small, round spots characteristic of the ladybug's appearance.
+  Beneath the elytra, two wings are tucked away, used for flight. The body is compact
+  and slightly oval, tapering at the rear. The mesh image displays a low polygon count,
+  giving the ladybug a simplified and abstract representation. The absence of color
+  and texture suggests that this is a basic 3D model intended for potential enhancement
+  and detailed design work.[PATCH 1] The front view of the 3D a ladybug mesh, [PATCH
+  2] The back view of the 3D a ladybug mesh, [PATCH 3] The right view of the 3D a
+  ladybug mesh, [PATCH 4] The left view of the 3D a ladybug mesh, [PATCH 5] The front
+  right view of the 3D a ladybug mesh, [PATCH 6] The front left view of the 3D a ladybug
+  mesh, [PATCH 7] The back righ view of the 3D a ladybug mesh, [PATCH 8] The back
+  left view of the 3D a ladybug mesh, [PATCH 9] The top view of the 3D a ladybug mesh.
 text_prompt: a ladybug
 timestep_sampling: sigma
 train_blocks: all
