--- a/config/donkey2camel_flux.yml
+++ b/config/donkey2camel_flux.yml
@@ -9,7 +9,7 @@ aug_loc: 1
 azim_max: 360.0
 azim_min: 0.0
 base_text_prompt: a donkey
-batch_size: 10
+batch_size: 18
 blocks_to_swap: 0
 bsdf: diffuse
 bucket_no_upscale: true
@@ -51,7 +51,7 @@ fov_min: 30.0
 fp8_base: false
 gpu: 0
 gradient_accumulation_steps: 1
-guidance_scale: 100
+guidance_scale: 7.5
 huber_c: 0.1
 huber_schedule: snr
 ip_noise_gamma: 0
@@ -121,21 +121,19 @@ seed: 12345
 single_blocks_to_swap: 0
 t5xxl: model_zoo/flux/t5xxl_fp16.safetensors
 t5xxl_max_token_length: 512
-target_prompt: "The nine-grid image shows different views of a camel. The camel is\
-  \ characterized by its elongated body, long neck, and distinct head. The head features\
-  \ a tapered snout, a pair of ears, and a slightly curved profile. The camel's body\
-  \ is lean and slightly humped, indicative of its iconic structure for storing fat.\
-  \ The legs are long, slender, and straight, supporting the body\u2019s height and\
-  \ giving it a graceful stature. The tail is thin and tapered, ending in a small\
-  \ tuft. The mesh exhibits a smooth, low-polygon style that provides a simplified\
-  \ and geometric representation. The absence of texture and color in the model indicates\
-  \ that it is a basic 3D asset, likely intended as a foundation for further refinement\
-  \ and detailed design work. [PATCH 1] The front view of the 3D a camel mesh, [PATCH\
-  \ 2] The back view of the 3D a camel mesh, [PATCH 3] The right view of the 3D a\
-  \ camel mesh, [PATCH 4] The left view of the 3D a camel mesh, [PATCH 5] The front\
-  \ right view of the 3D a camel mesh, [PATCH 6] The front left view of the 3D a camel\
-  \ mesh, [PATCH 7] The back righ view of the 3D a camel mesh, [PATCH 8] The back\
-  \ left view of the 3D a camel mesh, [PATCH 9] The top view of the 3D a camel mesh."
+target_prompt: The nine-grid image shows different views of a camel. The camel is
+  characterized by a humped back and a long neck. The head of the camel features a
+  distinct, elongated snout and a pair of large, expressive eyes, with ears positioned
+  on either side of its head. The body is robust, with long, slender legs that support
+  its weight. The mesh exhibits a faceted, low polygon style that gives the camel
+  a geometric and simplified appearance. The absence of texture and color in the mesh
+  indicates that it is a basic 3D model that can be used as a basis for further design
+  and development.[PATCH 1] The front view of the 3D a camel mesh, [PATCH 2] The back
+  view of the 3D a camel mesh, [PATCH 3] The right view of the 3D a camel mesh, [PATCH
+  4] The left view of the 3D a camel mesh, [PATCH 5] The front right view of the 3D
+  a camel mesh, [PATCH 6] The front left view of the 3D a camel mesh, [PATCH 7] The
+  back righ view of the 3D a camel mesh, [PATCH 8] The back left view of the 3D a
+  camel mesh, [PATCH 9] The top view of the 3D a camel mesh.
 text_prompt: a camel
 timestep_sampling: sigma
 train_blocks: all
