--- a/config/donkey2giraffe_flux.yml
+++ b/config/donkey2giraffe_flux.yml
@@ -9,7 +9,7 @@ aug_loc: 1
 azim_max: 360.0
 azim_min: 0.0
 base_text_prompt: a donkey
-batch_size: 10
+batch_size: 18
 blocks_to_swap: 0
 bsdf: diffuse
 bucket_no_upscale: true
@@ -121,16 +121,22 @@ seed: 12345
 single_blocks_to_swap: 0
 t5xxl: model_zoo/flux/t5xxl_fp16.safetensors
 t5xxl_max_token_length: 512
-target_prompt: The nine-grid image shows different views of the Bust of Venus. The
-  bust is characterized by its elegant and classical form with detailed facial features
-  and a smooth, graceful neck. The head is adorned with intricately styled hair that
-  is swept back or arranged in classical curls. The face features tranquil and harmonious
-  expressions, with well-defined eyes, a delicate nose, and full lips. The shoulders
-  exhibit simplicity and balance, completing the classical representation. The mesh
-  exhibits a smooth, finely modeled 3D style, devoid of textures and colors, which
-  emphasizes the sculptural qualities and timeless beauty of the form. The absence
-  of intricate textures or coloration indicates that this is a basic 3D model, suitable
-  as a foundational piece for further artistic work or development.
+target_prompt: The nine-grid image shows different views of a giraffe. The giraffe
+  is characterized by its elongated neck, slender legs, and compact body, providing
+  it with a distinct and recognizable profile. The giraffe's head features a pair
+  of ossicones (horn-like structures), a slightly rounded snout, and large ears that
+  extend outward. The mesh emphasizes the giraffe's slender and tall form, with the
+  neck extending dramatically from the shoulders. The body tapers into a relatively
+  slim abdomen leading to a thin tail. The legs are long and straight, with a delicate
+  proportion relative to the body. The low polygon style of the mesh gives the model
+  a simplified, faceted appearance, devoid of textures and color, making it a basic
+  3D representation suitable for conceptualization or further refinement.[PATCH 1]
+  The front view of the 3D a giraffe mesh, [PATCH 2] The back view of the 3D a giraffe
+  mesh, [PATCH 3] The right view of the 3D a giraffe mesh, [PATCH 4] The left view
+  of the 3D a giraffe mesh, [PATCH 5] The front right view of the 3D a giraffe mesh,
+  [PATCH 6] The front left view of the 3D a giraffe mesh, [PATCH 7] The back righ
+  view of the 3D a giraffe mesh, [PATCH 8] The back left view of the 3D a giraffe
+  mesh, [PATCH 9] The top view of the 3D a giraffe mesh.
 text_prompt: a giraffe
 timestep_sampling: sigma
 train_blocks: all
