--- a/config/shoe1_highheel_flux.yml
+++ b/config/shoe1_highheel_flux.yml
@@ -8,7 +8,7 @@ aug_light: 1
 aug_loc: 1
 azim_max: 360.0
 azim_min: 0.0
-base_text_prompt: a guitar
+base_text_prompt: a shoe
 batch_size: 18
 blocks_to_swap: 0
 bsdf: diffuse
@@ -26,7 +26,7 @@ clip_l: model_zoo/flux/clip_l.safetensors
 clip_model: ViT-B/32
 clip_skip: 1
 clip_weight: 2.0
-config: config/guitar2banjo_flux.yml
+config: config/shoe1_highheel_flux.yml
 consistency_azim_filter: 20
 consistency_clip_model: ViT-B/32
 consistency_elev_filter: 30
@@ -84,7 +84,7 @@ max_timestep: 1000
 max_token_length: 225
 max_train_steps: 8500
 mem_eff_attn: true
-mesh: meshes/rotated/guitar.obj
+mesh: meshes/rotated/shoe1.obj
 min_bucket_reso: 256
 min_timestep: 0
 mixed_precision: bf16
@@ -102,7 +102,7 @@ noise_offset: 0.02
 noise_offset_random_strength: false
 noise_offset_type: Original
 optimizer_type: AdamW8bit
-output_path: ./outputs/guitar2banjo_flux
+output_path: ./outputs/shoe1_highheel_flux
 persistent_data_loader_workers: 0
 pretrained_model_name_or_path: model_zoo/flux/flux1-dev.safetensors
 prior_loss_weight: 1
@@ -121,22 +121,23 @@ seed: 12345
 single_blocks_to_swap: 0
 t5xxl: model_zoo/flux/t5xxl_fp16.safetensors
 t5xxl_max_token_length: 512
-target_prompt: The nine-grid image shows different views of a banjo-like object. The
-  banjo is characterized by a rounded, circular body and a long, slender neck. Its
-  body is flat and features a slightly raised edge, resembling a drum-like structure.
-  The neck extends vertically and culminates in a tuning peg section. The neck is
-  slim and exhibits a straight profile while connecting seamlessly to the body. The
-  tuning peg head is distinct and slightly curved, accommodating multiple tuning pegs.
-  The mesh exhibits a faceted, low-polygon style that gives the banjo a geometric
-  and simplified appearance. The absence of texture and color in the mesh indicates
-  that it is a basic 3D model, well-suited as a prototype for further refinement or
-  design adaptations.[PATCH 1] The front view of the 3D a banjo mesh, [PATCH 2] The
-  back view of the 3D a banjo mesh, [PATCH 3] The right view of the 3D a banjo mesh,
-  [PATCH 4] The left view of the 3D a banjo mesh, [PATCH 5] The front right view of
-  the 3D a banjo mesh, [PATCH 6] The front left view of the 3D a banjo mesh, [PATCH
-  7] The back righ view of the 3D a banjo mesh, [PATCH 8] The back left view of the
-  3D a banjo mesh, [PATCH 9] The top view of the 3D a banjo mesh.
-text_prompt: a banjo
+target_prompt: The nine-grid image shows different views of a high heel shoe. The
+  high heel is characterized by a sharp, pointed toe and a distinct heel that significantly
+  elevates the back of the shoe, creating a pronounced arch. The heel is narrow and
+  tapers down to a point, which is a defining feature. The side views highlight the
+  sleek and slender profile of the shoe, with a smooth, continuous curve from the
+  toe to the heel. The top view shows an elongated silhouette, emphasizing the pointed
+  toe and narrow width. The mesh exhibits a smooth and refined surface that gives
+  the high heel a polished and elegant appearance. The absence of texture and color
+  in the mesh indicates that it is a basic 3D model that can be used as a basis for
+  further design and development.[PATCH 1] The front view of the 3D a high heel mesh,
+  [PATCH 2] The back view of the 3D a high heel mesh, [PATCH 3] The right view of
+  the 3D a high heel mesh, [PATCH 4] The left view of the 3D a high heel mesh, [PATCH
+  5] The front right view of the 3D a high heel mesh, [PATCH 6] The front left view
+  of the 3D a high heel mesh, [PATCH 7] The back righ view of the 3D a high heel mesh,
+  [PATCH 8] The back left view of the 3D a high heel mesh, [PATCH 9] The top view
+  of the 3D a high heel mesh.
+text_prompt: a high heel
 timestep_sampling: sigma
 train_blocks: all
 train_res: 512
